--- a/css/home.css
+++ b/css/home.css
@@ -13,7 +13,7 @@ body {
 }
 
 header {
-    background-color: #d6a00b;
+    background-color: #ff3900;
     text-align: end;
     padding: 20px;
     color: #fff;
@@ -35,7 +35,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #ffcc00; 
+    color:#b83814 ; 
 }
 
 .slide{
@@ -43,7 +43,11 @@ nav ul li a:hover {
     margin-top: 20px;
     padding-bottom: 20px;
 }
-
+ h2{
+    color: #ff3900;
+    text-align: center;
+    
+ }
 .container {
     max-width: 1000px;
     margin: 20px auto;
@@ -84,7 +88,7 @@ nav ul li a:hover {
 
 .card a {
     display: block;
-    background-color: #e4e00f;
+    background-color:#ff3900;
     color: white;
     text-decoration: none;
     padding: 15px 32px;
@@ -96,7 +100,7 @@ nav ul li a:hover {
 }
 
 .card a:hover {
-    background-color: #e4d614;
+    background-color: #f56c47;
 }
 
 @media (max-width: 768px) {
@@ -118,7 +122,7 @@ nav ul li a:hover {
 }
 
 footer {
-    background-color: #c9b716;
+    background-color: #ff3900;
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -130,11 +134,12 @@ footer p {
 }
 
 footer a {
-    color: #ffcc00;
+    color: #fff;
     text-decoration: none;
     transition: color 0.3s ease;
 }
 
 footer a:hover {
-    color: #fff;
+    color:#b83814 ; 
+    
 }
