--- a/css/receitas.css
+++ b/css/receitas.css
@@ -3,7 +3,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 body {
     background-color: #e7dec4;
     font-family: "Open Sans", sans-serif;
@@ -13,7 +12,7 @@ body {
 }
 
 header {
-    background-color: #d6a00b;
+    background-color: #ff3909;
     text-align: end;
     padding: 20px;
     color: #fff;
@@ -35,7 +34,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #ffcc00; 
+    color: #b83814; 
 }
 
 
@@ -58,7 +57,7 @@ nav ul li a:hover {
 }
 
 footer {
-    background-color: #c9b716;
+    background-color:#ff3900 ;
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -70,7 +69,7 @@ footer p {
 }
 
 footer a {
-    color: #ffcc00;
+    color: #b83814;
     text-decoration: none;
     transition: color 0.3s ease;
 }
