Centralizando o botão de login

--- a/css/login.css
+++ b/css/login.css
@@ -44,14 +44,18 @@ nav ul li a:hover {
     padding: 0 20px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: center
+}
+
+form {
+    text-align: center;
 }
 
 .card {
     background-color: #fff;
     color: #c9b716;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+    border-radius: 10px;
     text-align: center;
     padding: 20px;
     width: calc(33.33% - 40px);
