--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,5 @@
+
+
 * {
     margin: 0;
     padding: 0;
@@ -12,45 +14,114 @@ body {
     flex-direction: column;
 }
 
+
 header {
-    background-color: #ff3900;
-    text-align: end;
-    padding: 20px;
-    color: #fff;
+    background-color: #ff3900; 
+    padding: 10px 0; 
+    position: fixed;
+    width: 100%; 
+    top: 0; 
+    z-index: 1000; 
 }
 
-nav ul {
-    list-style: none;
+
+.container {
+    max-width: 1200px; 
+    margin: 0 auto; 
+    display: flex; 
+    align-items: center; 
+}
+.logo img {
+    height: 8rem; 
+    width: auto; 
+    margin-right: 20px; 
 }
 
-nav ul li {
-    display: inline-block;
-    margin-right: 20px;
+.navbar {
+    flex-grow: 1; 
 }
 
-nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    transition: color 0.3s ease;
+
+.nav-menu {
+    list-style-type: none; 
+    margin: 0; 
+    padding: 0; 
+    display: flex; 
+    justify-content: flex-end; 
 }
 
-nav ul li a:hover {
-    color:#b83814 ; 
+
+.nav-item {
+    margin-left: 20px; 
 }
 
-.slide{
-    text-align: center;
-    margin-top: 20px;
-    padding-bottom: 20px;
+
+.nav-item a {
+    text-decoration: none; 
+    color: #fff; 
+    font-weight: bold; 
 }
- h2{
-    color: #ff3900;
-    text-align: center;
-    
- }
- 
- 
- 
+
+
+.nav-item a:hover {
+    color: #ff9100; 
+}
+
+
+.content {
+    margin-top: 80px; 
+}
+
+
+.slider {
+    position: relative; 
+    overflow: hidden; 
+}
+
+.slides {
+    display: flex; 
+    transition: transform 0.5s ease-in-out; 
+}
+
+
+.slide {
+    min-width: 100%; 
+    flex: 0 0 auto; 
+}
+
+
+.slide img {
+    width: 100%; 
+    height: auto; 
+}
+
+
+.navigation-bar {
+    position: absolute; 
+    bottom: 10px; 
+    left: 50%; 
+    transform: translateX(-50%);
+}
+
+.manual-btn {
+    cursor: pointer; 
+    background-color: #fff; 
+    width: 15px; 
+    height: 15px; 
+    border-radius: 50%; 
+    display: inline-block; 
+    margin: 0 5px; 
+}
+
+@keyframes slideAnimation {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(-100%); }
+}
+.slides {
+    animation: slideAnimation 5s infinite; 
+}
+
+
 .container {
     max-width: 1000px;
     margin: 20px auto;
