--- a/css/login.css
+++ b/css/login.css
@@ -1,19 +1,13 @@
-* {
+*{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
-body {
-    background-color: #e7dec4;
-    font-family: "Open Sans", sans-serif;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
+
 
 header {
     background-color: #ff3909;
-    text-align: end;
+    display: flex;
+    text-align: center;
     padding: 20px;
     color: #fff;
 }
