--- a/css/home.css
+++ b/css/home.css
@@ -14,7 +14,6 @@ body {
     flex-direction: column;
 }
 
-
 header {
     background-color: #ff3900; 
     padding: 10px 0; 
@@ -32,9 +31,9 @@ header {
     align-items: center; 
 }
 .logo img {
-    height: 8rem; 
+    height: 5rem; 
     width: auto; 
-    margin-right: 20px; 
+    margin-right: 10px;
 }
 
 .navbar {
@@ -120,7 +119,11 @@ header {
 .slides {
     animation: slideAnimation 5s infinite; 
 }
-
+.titulo{
+    text-align: center;
+    margin: 4rem;
+    padding: 4rem;
+}
 
 .container {
     max-width: 1000px;
@@ -195,55 +198,138 @@ header {
     }
 }
 
-
-.footer {
-    background-color: #ff3900;
-    padding: 20px;
-    text-align: center;
+footer {
+    width: 100%;
+    color: #ffffff;
+    justify-content: center;
 }
 
-
-.footer span {
-    font-weight: bold;
+.footer-link {
+    text-decoration: none;
 }
 
-
-.social-icons i {
-    margin: 0 5px;
-    cursor: pointer;
+#footer_content {
+    background-color:#ff3909;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 3rem 3.5rem;
 }
 
-
-.subscribe form {
-    margin-top: 10px;
+#footer_contacts h1 {
+    margin-bottom: 0.75rem;
 }
 
-.subscribe input[type="email"] {
-    width: 250px;
-    padding: 8px;
-    border: 1px solid #ccc;
+#footer_social_media {
+    display: flex;
+    gap: 2rem;
+    margin-top: 1.5rem;
+} 
+
+#footer_social_media .footer-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.5rem;
+    width: 2.5rem;
+    color:#ffffff;
+    border-radius: 50%;
+    transition: all 0.4s;
+}
+
+#footer_social_media .footer-link i {
+    font-size: 1.25rem;    
+}
+
+#footer_social_media .footer-link:hover {
+    opacity: 0.8;
+}
+
+#instagram {
+    background: linear-gradient(#7f37c9, #ff2992, #ff9807);
+}
+
+#facebook {
+    background-color: #4267b3;
+}
+
+#whatsapp {
+    background-color: #25d366;
+}
+
+.footer-list {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    list-style: none;
+}
+
+.footer-list .footer-link {
+    color: #ffffff;
+    transition: all 0.4s;
+}
+
+.footer-list .footer-link:hover {
+    color: #e76949;
+}
+
+#footer_subscribe {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+#footer_subscribe p {
+    color:#ffffff;
+}
+
+#input_group {
+    display: flex;
+    align-items: center;
+    background-color:#ffffff;
     border-radius: 4px;
 }
 
-.subscribe button {
-    padding: 8px 16px;
-    background-color: #131212;
-    color: #fff;
+#input_group input {
+    all: unset;
+    padding: 0.75rem;
+    width: 100%;
+}
+
+#input_group button {
+    background-color: #0f0f0f;
     border: none;
-    border-radius: 4px;
+    color: #ffffff;
+    padding: 0px 1.25rem;
+    font-size: 1.125rem;
+    height: 100%;
+    border-radius: 0px 4px 4px 0px;
     cursor: pointer;
+    transition: all 0.4s;
 }
 
-.subscribe button:hover {
-    background-color: #ff3900;
+#input_group button:hover {
+    opacity: 0.8;
 }
 
-
-.contact h4 {
-    margin-top: 20px;
+#footer_copyright {
+    display: flex;
+    justify-content: center;
+    background-color:#0f0f0f;
+    font-size: 0.9rem;
+    padding: 1.5rem;
+    font-weight: 100;
 }
 
-.contact p {
-    margin: 5px 0;
+@media screen and (max-width: 768px) {
+    #footer_content {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+    }
 }
 
+@media screen and (max-width: 426px) {
+    #footer_content {
+        grid-template-columns: repeat(1, 1fr);
+        padding: 3rem 2rem;
+    }
+}
