--- a/css/loja.css
+++ b/css/loja.css
@@ -78,3 +78,212 @@ footer a:hover {
     color: #fff;
 }
 
+.footer-link {
+    text-decoration: none;
+}
+
+#footer_content {
+    background-color:#ff3909;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 3rem 3.5rem;
+}
+
+#footer_contacts h1 {
+    margin-bottom: 0.75rem;
+}
+
+#footer_social_media {
+    display: flex;
+    gap: 2rem;
+    margin-top: 1.5rem;
+} 
+
+#footer_social_media .footer-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.5rem;
+    width: 2.5rem;
+    color:#ffffff;
+    border-radius: 50%;
+    transition: all 0.4s;
+}
+
+#footer_social_media .footer-link i {
+    font-size: 1.25rem;    
+}
+
+#footer_social_media .footer-link:hover {
+    opacity: 0.8;
+}
+
+#instagram {
+    background: linear-gradient(#7f37c9, #ff2992, #ff9807);
+}
+
+#facebook {
+    background-color: #4267b3;
+}
+
+#whatsapp {
+    background-color: #25d366;
+}
+
+.footer-list {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    list-style: none;
+}
+
+.footer-list .footer-link {
+    color: #ffffff;
+    transition: all 0.4s;
+}
+
+.footer-list .footer-link:hover {
+    color: #e76949;
+}
+
+#footer_subscribe {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+#footer_subscribe p {
+    color:#ffffff;
+}
+
+#input_group {
+    display: flex;
+    align-items: center;
+    background-color:#ffffff;
+    border-radius: 4px;
+}
+
+#input_group input {
+    all: unset;
+    padding: 0.75rem;
+    width: 100%;
+}
+
+#input_group button {
+    background-color: #0f0f0f;
+    border: none;
+    color: #ffffff;
+    padding: 0px 1.25rem;
+    font-size: 1.125rem;
+    height: 100%;
+    border-radius: 0px 4px 4px 0px;
+    cursor: pointer;
+    transition: all 0.4s;
+}
+
+#input_group button:hover {
+    opacity: 0.8;
+}
+
+#footer_copyright {
+    display: flex;
+    justify-content: center;
+    background-color:#0f0f0f;
+    font-size: 0.9rem;
+    padding: 1.5rem;
+    font-weight: 100;
+}
+
+@media screen and (max-width: 768px) {
+    #footer_content {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+    }
+}
+
+@media screen and (max-width: 426px) {
+    #footer_content {
+        grid-template-columns: repeat(1, 1fr);
+        padding: 3rem 2rem;
+    }
+}
+
+
+main {
+    display: flex;
+    
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-left: 1%;
+    width: 99%;
+}
+
+.food-title {
+    margin: 8px;
+}
+
+.vitrine {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    text-align: right;
+    padding: 10px;
+    border: 1px solid rgb(174, 166, 166);
+    margin: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px  rgba(107, 106, 106, 0.816);
+    transition: 0.2s;
+    width: 55vh;
+}
+.vitrine:hover {
+    box-shadow: 0px 2px 5px  rgba(0, 0, 0, 0.816);
+}
+
+.vitrine img {
+    border-radius: 5px;
+    width: 150px;
+    height: 100px;
+    
+}
+.vitrine ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding: 10px 0 0;
+}
+.vitrine ul li a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px 35px;
+    background: rgb(239, 239, 239);
+    border: 1px solid rgba(107, 106, 106, 0.816);
+    border-radius: 8px;
+
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+
+    text-decoration: none;
+    font-weight: 500;
+    transition: 0.2s;
+    color: black;
+}
+.vitrine ul li a:hover {
+    color: aliceblue;
+    background-color: #D66049;
+    border: 1px solid rgba(0, 0, 0, 0.816);
+}
+
+.foto {
+    display: flex;
+    align-items: end;
+    justify-content: right;
+}
+.container-vitrine {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
