aplicação de css

--- a/css/login.css
+++ b/css/login.css
@@ -5,7 +5,12 @@
 }
 
 body {
-    background-color: #e7dec4;
+    background-image: url("/img/imagem_culinaria_png.png");
+    background-size: 600px;
+    background-repeat: no-repeat;
+    background-position: 100px;
+    background-position-x: 100px;
+    background-position-y: 20px;
     font-family: "Open Sans", sans-serif;
     min-height: 100vh;
     display: flex;
@@ -39,45 +44,48 @@ nav ul li a:hover {
 }
 
 .container {
-    max-width: 1000px;
-    margin: 60px auto;
-    padding: 0 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center
+    width: 1800px;
+    height: 300px;
+    margin: 80px;
+    padding: 20px;
+    display: flexbox;
 }
 
 form {
     text-align: center;
+    margin: 30px;
+    color: black;
+    font-size: 18px;
+    display: flexbox;
+    flex-direction: column;
+}
+
+button {
+    margin: 20px;
+    width: 90px;
+    height: 40px;
+}
+
+input {
+    height: 30px;
+    font-size: 30px;
+}
+label {
+    text-align: left;
 }
 
 .card {
-    background-color: #fff;
-    color: #c9b716;
+    background-color: #BBCCBB;
+    font-size: 22px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     text-align: center;
-    padding: 20px;
-    width: calc(33.33% - 40px);
+    padding: 30px;
+    width: 600px;
     margin-bottom: 20px;
-}
-
-@media (max-width: 768px) {
-    .container {
-        padding: 0 15px;
-    }
-    .card {
-        width: calc(50% - 30px);
-    }
-}
-
-@media (max-width: 576px) {
-    .container {
-        padding: 0 10px;
-    }
-    .card {
-        width: calc(100% - 20px);
-    }
+    display: flex;
+    flex-direction: column;
+    margin-left: 750px;
 }
 
 footer {
