--- a/css/loja.css
+++ b/css/loja.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     background-color: #e7dec4;
     font-family: "Open Sans", sans-serif;
@@ -12,30 +13,58 @@ body {
 }
 
 header {
-    background-color: #ff3909;
-    text-align: end;
-    padding: 20px;
-    color: #fff;
+    background-color: #ff3900; 
+    padding: 10px 0; 
+    position: fixed;
+    width: 100%; 
+    top: 0; 
+    z-index: 1000; 
 }
 
-nav ul {
-    list-style: none;
+
+.container {
+    max-width: 1200px; 
+    margin: 0 auto; 
+    display: flex; 
+    align-items: center; 
+}
+.logo img {
+    height: 5rem; 
+    width: auto; 
+    margin-right: 10px;
 }
 
-nav ul li {
-    display: inline-block;
-    margin-right: 20px;
+.navbar {
+    flex-grow: 1; 
 }
 
-nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    transition: color 0.3s ease;
+
+.nav-menu {
+    list-style-type: none; 
+    margin: 0; 
+    padding: 0; 
+    display: flex; 
+    justify-content: flex-end; 
 }
 
-nav ul li a:hover {
-    color: #b83814; 
+
+.nav-item {
+    margin-left: 20px; 
 }
+
+
+.nav-item a {
+    text-decoration: none; 
+    color: #fff; 
+    font-weight: bold; 
+}
+
+
+.nav-item a:hover {
+    color: #ff9100; 
+}
+
+
 
 
 @media (max-width: 768px) {
