--- a/css/receitas.css
+++ b/css/receitas.css
@@ -1,8 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap');
+
+
+* {
+    font-family: 'Inter', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    letter-spacing: 1px;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     background-color: #e7dec4;
     font-family: "Open Sans", sans-serif;
@@ -12,32 +24,57 @@ body {
 }
 
 header {
-    background-color: #ff3909;
-    text-align: end;
-    padding: 20px;
-    color: #fff;
-}
-
-nav ul {
-    list-style: none;
-}
-
-nav ul li {
-    display: inline-block;
-    margin-right: 20px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    transition: color 0.3s ease;
-}
-
-nav ul li a:hover {
-    color: #b83814; 
+    background-color: #ff3900; 
+    padding: 10px 0; 
+    position: fixed;
+    width: 100%; 
+    top: 0; 
+    z-index: 1000; 
 }
 
 
+
+.container {
+    max-width: 1200px; 
+    margin: 0 auto; 
+    display: flex; 
+    align-items: center; 
+}
+.logo img {
+    height: 5rem; 
+    width: auto; 
+    margin-right: 10px;
+}
+
+.navbar {
+    flex-grow: 1; 
+}
+
+
+.nav-menu {
+    list-style-type: none; 
+    margin: 0; 
+    padding: 0; 
+    display: flex; 
+    justify-content: flex-end; 
+}
+
+
+.nav-item {
+    margin-left: 20px; 
+}
+
+
+.nav-item a {
+    text-decoration: none; 
+    color: #fff; 
+    font-weight: bold; 
+}
+
+
+.nav-item a:hover {
+    color: #ff9100; 
+}
 @media (max-width: 768px) {
     .container {
         padding: 0 15px;
@@ -56,25 +93,219 @@ nav ul li a:hover {
     }
 }
 
-footer {
-    background-color:#ff3900 ;
-    color: #fff;
-    padding: 20px;
+main {
+    height: 80vh;
+}
+
+
+.receitas-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 20px auto;
+    max-width: 1200px;
+}
+
+.coluna {
+    flex: 0 1 30%;
+    margin-bottom: 20px;
+}
+
+.receita {
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    overflow: hidden;
+    transition: all 0.3s ease;
+}
+
+.receita img {
+    width: 100%;
+    height: auto;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.receita h2 {
+    margin: 10px;
+    font-size: 1.2rem;
+}
+
+.toggle-button {
+    background-color: #ff3909;
+    border: none;
+    color: white;
+    padding: 10px 20px;
     text-align: center;
-    margin-top: auto;
-}
-
-footer p {
-    margin: 10px 0;
-}
-
-footer a {
-    color: #b83814;
     text-decoration: none;
-    transition: color 0.3s ease;
+    display: inline-block;
+    font-size: 16px;
+    margin: 10px;
+    cursor: pointer;
 }
 
-footer a:hover {
-    color: #fff;
+.conteudo {
+    padding: 10px;
+    display: none;
 }
 
+.conteudo p, .conteudo ul, .conteudo ol {
+    margin-bottom: 10px;
+}
+
+.conteudo ul, .conteudo ol {
+    padding-left: 20px;
+}
+
+.conteudo li {
+    margin-bottom: 5px;
+}
+
+@media screen and (max-width: 768px) {
+    .coluna {
+        flex: 0 1 45%;
+    }
+}
+
+
+@media screen and (max-width: 576px) {
+    .coluna {
+        flex: 0 1 100%;
+    }
+}
+
+footer {
+    width: 100%;
+    color: #ffffff;
+}
+
+.footer-link {
+    text-decoration: none;
+}
+
+#footer_content {
+    background-color:#ff3909;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 3rem 3.5rem;
+}
+
+#footer_contacts h1 {
+    margin-bottom: 0.75rem;
+}
+
+#footer_social_media {
+    display: flex;
+    gap: 2rem;
+    margin-top: 1.5rem;
+} 
+
+#footer_social_media .footer-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.5rem;
+    width: 2.5rem;
+    color:#ffffff;
+    border-radius: 50%;
+    transition: all 0.4s;
+}
+
+#footer_social_media .footer-link i {
+    font-size: 1.25rem;    
+}
+
+#footer_social_media .footer-link:hover {
+    opacity: 0.8;
+}
+
+#instagram {
+    background: linear-gradient(#7f37c9, #ff2992, #ff9807);
+}
+
+#facebook {
+    background-color: #4267b3;
+}
+
+#whatsapp {
+    background-color: #25d366;
+}
+
+.footer-list {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    list-style: none;
+}
+
+.footer-list .footer-link {
+    color: #ffffff;
+    transition: all 0.4s;
+}
+
+.footer-list .footer-link:hover {
+    color: #e76949;
+}
+
+#footer_subscribe {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+#footer_subscribe p {
+    color:#ffffff;
+}
+
+#input_group {
+    display: flex;
+    align-items: center;
+    background-color:#ffffff;
+    border-radius: 4px;
+}
+
+#input_group input {
+    all: unset;
+    padding: 0.75rem;
+    width: 100%;
+}
+
+#input_group button {
+    background-color: #0f0f0f;
+    border: none;
+    color: #ffffff;
+    padding: 0px 1.25rem;
+    font-size: 1.125rem;
+    height: 100%;
+    border-radius: 0px 4px 4px 0px;
+    cursor: pointer;
+    transition: all 0.4s;
+}
+
+#input_group button:hover {
+    opacity: 0.8;
+}
+
+#footer_copyright {
+    display: flex;
+    justify-content: center;
+    background-color:#0f0f0f;
+    font-size: 0.9rem;
+    padding: 1.5rem;
+    font-weight: 100;
+}
+
+@media screen and (max-width: 768px) {
+    #footer_content {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+    }
+}
+
+@media screen and (max-width: 426px) {
+    #footer_content {
+        grid-template-columns: repeat(1, 1fr);
+        padding: 3rem 2rem;
+    }
+}
