--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,3 @@
-
-
 * {
     margin: 0;
     padding: 0;
@@ -65,12 +63,25 @@ header {
 .nav-item a:hover {
     color: #ff9100; 
 }
-
-
-.content {
-    margin-top: 80px; 
+@media (max-width: 768px) {
+    .container {
+        padding: 0 15px;
+    }
+    .card {
+        width: calc(50% - 30px);
+    }
 }
 
+@media (max-width: 576px) {
+    .container {
+        padding: 0 10px;
+    }
+    .card {
+        width: calc(100% - 20px);
+    }
+}
+
+/*css do slider*/
 
 .slider {
     position: relative; 
