--- a/css/equipe.css
+++ b/css/equipe.css
@@ -180,15 +180,25 @@ header {
     }
 }
 
+
 .about-team {
+    text-align: center;
     padding: 20px;
     background-color: #f8f8f8;
-    margin-top: 20px; /* Adicionado para criar espaço entre a seção anterior */
+    margin-top: 20px; 
+    
+}
+.about-img{
+width:800px;
+height: 400px;
+margin: 10px;
+padding: 10px;
+
 }
 
 .about-team h2 {
     text-align: center;
-    font-size: 24px;
+    font-size: 36px;
     color: #333;
     margin-bottom: 20px;
 }
