--- a/css/home.css
+++ b/css/home.css
@@ -81,61 +81,89 @@ header {
     }
 }
 
-/*css do slider*/
+/*css do carrossel*/
 
-.slider {
+.carousel {
+    position: relative;
+    width: 100%;
+    max-width: 800px;
+    margin: 20px auto; /* Centralizando o carrossel */
+    overflow: hidden;
+    border-radius: 10px;
+  }
+  
+  .carousel-container {
+    display: flex;
+    width: 300%; 
+    transition: transform 0.5s ease; 
+  }
+  
+  .carousel-slide {
+    width: 33.33%; 
+    flex-shrink: 0; 
     position: relative; 
-    overflow: hidden; 
-}
-
-.slides {
-    display: flex; 
-    transition: transform 0.5s ease-in-out; 
-}
-
-
-.slide {
-    min-width: 100%; 
-    flex: 0 0 auto; 
-}
-
-
-.slide img {
+  }
+  
+  .carousel-slide img {
     width: 100%; 
-    height: auto; 
-}
-
-
-.navigation-bar {
-    position: absolute; 
-    bottom: 10px; 
-    left: 50%; 
-    transform: translateX(-50%);
-}
-
-.manual-btn {
-    cursor: pointer; 
-    background-color: #fff; 
-    width: 15px; 
-    height: 15px; 
-    border-radius: 50%; 
-    display: inline-block; 
-    margin: 0 5px; 
-}
-
-@keyframes slideAnimation {
-    0% { transform: translateX(0); }
-    100% { transform: translateX(-100%); }
-}
-.slides {
-    animation: slideAnimation 5s infinite; 
-}
-.titulo{
+    height: auto;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+  
+  .carousel-text {
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10px;
     text-align: center;
-    margin: 4rem;
-    padding: 4rem;
-}
+    color: white;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    transition: opacity 0.5s ease;
+    
+  }
+  
+  
+  .carousel-text h2 {
+    font-size: 36px;
+    margin-bottom: 5px;
+  }
+  
+  .carousel-text p {
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+  
+  .carousel-text a {
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: #ff3909;
+    color: white;
+    text-decoration: none;
+    border-radius: 3px;
+  }
+  
+  .carousel-text a:hover {
+    background-color: #e68b4f;
+  }
+  
+ 
+/*css cards*/
 
+.receitas-visitada{
+    background-color: #f3dccd;
+  }
+  
+  .receitas-visitada h2{
+  text-align: center;
+  font-size: 40px;
+  margin: 0 auto;
+  padding: 1rem;
+  
+  }
 .container {
     max-width: 1000px;
     margin: 20px auto;
@@ -208,6 +236,94 @@ header {
         width: calc(100% - 20px);
     }
 }
+.util{
+    background-color: #f3dccd;
+  }
+  
+  .util h2{
+  text-align: center;
+  font-size: 40px;
+  margin: 0 auto;
+  padding: 1rem;
+  
+  }
+  
+
+/*css do artigo*/
+
+/* Estilos para a seção */
+section {
+    padding: 20px;
+    background-color: #f2f2f2;
+  }
+  
+  /* Estilos para o conteúdo dentro da seção */
+  .conteudo {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  /* Estilos para o artigo de receita */
+  .conteudo article {
+    flex: 1;
+    margin-right: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+  
+  /* Estilos para o título do artigo */
+  .conteudo article h2 {
+    color: #333;
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  /* Estilos para o texto do artigo */
+  .conteudo article p {
+    color: #666;
+    font-size: 16px;
+  }
+  
+  /* Estilos para o vídeo de receita */
+  .conteudo .video-container {
+    flex: 1;
+    margin-bottom: 20px;
+  }
+  
+  /* Estilos para o vídeo */
+  .video-container video {
+    width: 100%;
+    border-radius: 10px;
+  }
+  
+  /* Estilos para o botão */
+  #toggleButton {
+    padding: 10px 20px;
+    background-color: #ff3909;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  #toggleButton:hover {
+    background-color: #ff3900;
+  }
+  
+  /* Estilos para tornar o layout responsivo */
+  @media screen and (max-width: 768px) {
+    .conteudo {
+        flex-direction: column;
+    }
+    .conteudo article {
+        margin-right: 0;
+    }
+  }
+  
 
 footer {
     width: 100%;
