--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -104,8 +104,18 @@ label {
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="email"],
+input[type="password"],
+input[type="tel"] {
     width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+input[type="radio"] {
+    width: 10%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -314,3 +324,4 @@ footer {
         padding: 3rem 2rem;
     }
 }
+
