--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -145,7 +145,7 @@ input[type="submit"]:hover {
 }
 
 /* estilos dinâmicos */
-/* .required-popup::after {
+.required-popup::after {
     content: "*Campo obrigatório";
     position: absolute;
     top: 0;
@@ -156,7 +156,7 @@ input[type="submit"]:hover {
     width: auto;
     display: block;
     background-color: #202020;
-  } */
+  }
 
   .helper-text {
     display: none;
