--- a/css/equipe.css
+++ b/css/equipe.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,7 +8,7 @@
 
 body {
     background-color: #e7dec4;
-    font-family: "Open Sans", sans-serif;
+    font-family: "poppins", sans-serif;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -20,8 +22,6 @@ header {
     top: 0; 
     z-index: 1000; 
 }
-
-
 .container {
     max-width: 1200px; 
     margin: 0 auto; 
@@ -50,6 +50,10 @@ header {
 
 .nav-item {
     margin-left: 20px; 
+}
+.nav-item.active a {
+    color: #ff0000; /* Define a cor do texto para vermelho */
+    font-weight: bold; /* Deixa o texto em negrito */
 }
 
 
