--- a/css/receitas.css
+++ b/css/receitas.css
@@ -1,19 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 * {
-    font-family: 'Inter', sans-serif;
+    font-family: 'poppins', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     letter-spacing: 1px;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+
 
 body {
     background-color: #e7dec4;
@@ -63,6 +59,10 @@ header {
 .nav-item {
     margin-left: 20px; 
 }
+.nav-item.active a {
+    color: #ff0000; /* Define a cor do texto para vermelho */
+    font-weight: bold; /* Deixa o texto em negrito */
+}
 
 
 .nav-item a {
@@ -75,6 +75,7 @@ header {
 .nav-item a:hover {
     color: #ff9100; 
 }
+
 @media (max-width: 768px) {
     .container {
         padding: 0 15px;
@@ -84,7 +85,7 @@ header {
     }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 426px) {
     .container {
         padding: 0 10px;
     }
@@ -93,9 +94,7 @@ header {
     }
 }
 
-main {
-    height: 80vh;
-}
+
 
 
 .receitas-container {
@@ -119,8 +118,7 @@ main {
     overflow: hidden;
     transition: all 0.3s ease;
 }
-
-.receita img {
+ .receita img {
     width: 100%;
     height: auto;
     border-top-left-radius: 10px;
@@ -150,30 +148,34 @@ main {
     display: none;
 }
 
-.conteudo p, .conteudo ul, .conteudo ol {
+ .conteudo p, main .conteudo ul, main .conteudo ol {
     margin-bottom: 10px;
 }
 
-.conteudo ul, .conteudo ol {
+
+.conteudo ul, main .conteudo ol {
     padding-left: 20px;
 }
+
 
 .conteudo li {
     margin-bottom: 5px;
 }
 
+
+
 @media screen and (max-width: 768px) {
-    .coluna {
+    main .coluna {
         flex: 0 1 45%;
     }
 }
 
-
-@media screen and (max-width: 576px) {
-    .coluna {
+@media screen and (max-width: 426px) {
+    main .coluna {
         flex: 0 1 100%;
     }
 }
+
 
 footer {
     width: 100%;
