--- a/css/equipe.css
+++ b/css/equipe.css
@@ -24,7 +24,7 @@ header {
     z-index: 1000;
 }
 
-.container {
+.container-navbar {
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
@@ -67,27 +67,26 @@ header {
 .nav-item a:hover {
     color: #ff9100;
 }
-
 /* Estilos para dispositivos móveis */
 @media (max-width: 992px) {
     .nav-menu {
-        display: none; /* Esconde o menu de navegação por padrão */
-        flex-direction: column; /* Altera a direção do flex para uma coluna vertical */
-        position: fixed; /* Fixa o menu na parte superior */
+        display: none; 
+        flex-direction: column; 
+        position: fixed; 
         top: 0;
         left: 0;
         width: 100%;
-        background-color: #ff3900; /* Cor de fundo do menu */
-        padding: 10px; /* Espaçamento interno do menu */
-        z-index: 1000; /* Garante que o menu fique sobre os outros elementos */
+        background-color: #ff3900; 
+        padding: 10px; 
+        z-index: 1000; 
     }
 
     .nav-menu.show {
-        display: flex; /* Exibe o menu de navegação quando a classe show é adicionada */
+        display: flex; 
     }
 
     .nav-item {
-        margin: 10px 0; /* Adiciona espaçamento entre os itens do menu */
+        margin: 10px 0; 
     }
 }
 
@@ -97,6 +96,8 @@ header {
         display: none;
     }
 }
+
+
 /* css da section chefes*/
 
 .chefes {
